unpackaged/main/default/objects/ps_enrollment__c/ps_enrollment__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Fields used during a ProfitStars Enrollment Call</description>
    <label>ps_enrollment</label>
</CustomObject>