unpackaged/main/default/objects/ps_enrollment__c/fields/Add_to_Query__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Query__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines if we need to add the field to the query while building it in the code</description>
    <label>Add to Query</label>
    <type>Checkbox</type>
</CustomField>