unpackaged/main/default/objects/ps_enrollment__c/fields/Disabled_If__c.field-meta.xml
<CustomField>
    <fullName>Disabled_If__c</fullName>
    <label>Disabled If</label>
    <type>TextArea</type>
</CustomField>