unpackaged/main/default/objects/ps_enrollment__c/fields/Field_Path__c.field-meta.xml
<CustomField>
    <fullName>Field_Path__c</fullName>
    <description>Field Path, eg: obj.field__r.field</description>
    <label>Field Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>