unpackaged/main/default/objects/ps_enrollment__c/fields/Indexed__c.field-meta.xml
<CustomField>
    <fullName>Indexed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether or not the key sent to profit stars will be appended with _&lt;INDEX NUMBER&gt;</description>
    <label>Indexed</label>
    <type>Checkbox</type>
</CustomField>