unpackaged/main/default/objects/ps_enrollment__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this field Required?</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>